# mauikit-imagetools

./: .gitignore  .kde-ci.yml  CMakeLists.txt  Mainpage.dox  MauiKitImageToolsConfig.cmake.in  MauiKitImageToolsConfig.cmake.in.5  MauiKitImageToolsConfig.cmake.in.6  Messages.sh  metainfo.yaml
examples/: ImageEditor.qml  ImageInfoDialog.qml  KirigamiExample.qml
po/ar/: mauikitimagetools.po
po/ca/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/ca@valencia/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/cs/: mauikitimagetools.po
po/de/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/en_GB/: mauikitimagetools.po
po/eo/: mauikitimagetools.po
po/es/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/eu/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/fi/: mauikitimagetools.po
po/fr/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/ga/: mauikitimagetools.po
po/gl/: mauikitimagetools.po
po/he/: mauikitimagetools.po
po/it/: mauikitimagetools.po
po/ja/: mauikitimagetools.po
po/ka/: mauikitimagetools.po
po/ko/: mauikitimagetools.po
po/lt/: mauikitimagetools.po
po/lv/: mauikitimagetools.po
po/nl/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/nn/: mauikitimagetools.po
po/pl/: mauikitimagetools.po
po/pt/: mauikitimagetools.po
po/pt_BR/: mauikitimagetools.po
po/sa/: mauikitimagetools.po
po/sk/: mauikitimagetools.po
po/sl/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/sv/: mauikitimagetools.po
po/tr/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/uk/: MauiKitImageToolsPlugin.po  mauikitimagetools.po
po/zh_CN/: mauikitimagetools.po
po/zh_TW/: mauikitimagetools.po
src/: CMakeLists.txt  resources.qrc
src/Cities/: Cities.cpp  Cities.h  City.cpp  City.h
src/code/: exiv2extractor.cpp  exiv2extractor.h  imagemetadata.cpp  imagemetadata.h  imagetools_plugin.cpp  imagetools_plugin.h  kdtree.cpp  kdtree.h  moduleinfo.cpp  moduleinfo.h  picinfomodel.cpp  picinfomodel.h  reversegeocoder.cpp  reversegeocoder.h  textscanner.cpp  textscanner.h
src/code/geolocation/: cities.cpp  cities.h  citiesdb.cpp  citiesdb.h  city.cpp  city.h  kdtree.cpp  kdtree.hpp
src/code/modules/editor/: CMakeLists.txt
src/code/modules/editor/src/: CMakeLists.txt  imagedocument.cpp  imagedocument.h
src/code/modules/editor/src/commands/: colorcommands.cpp  colorcommands.h  command.cpp  command.h  cropcommand.h  mirrorcommand.cpp  mirrorcommand.h  resizecommand.h  rotatecommand.cpp  rotatecommand.h  transformcommand.cpp  transformcommand.h
src/code/modules/editor/src/controls/: BasicResizeHandle.qml  CropBackground.qml  ImageEditor.qml  SelectionBackground.qml  SelectionHandle.qml
src/code/modules/editor/src/controls/private/: ColourBar.qml  Ruler.qml  TransformationBar.qml
src/code/modules/geolocation/: cities.cpp  cities.h  citiesdb.cpp  citiesdb.h  city.h  kdtree.cpp
src/code/modules/image2text/: CMakeLists.txt
src/code/modules/image2text/src/: CMakeLists.txt  OCRLanguageModel.h  ocs.cpp  ocs.h
src/code/modules/metadata/: exiv2.hpp  exiv2extractor.cpp  exiv2extractor.h
src/code/modules/opencv/: CMakeLists.txt
src/code/modules/opencv/code/: CMakeLists.txt  convertimage.hpp  cvmatandqimage.cpp  preprocessimage.cpp  preprocessimage.hpp
src/controls/: ImageEditor.qml  ImageInfoDialog.qml  ImageViewer.qml
src/controls.5/: ImageInfoDialog.qml
src/controls.5/image2text/: OCRPage.qml
src/controls.5/private/: Ruler.qml  TransformationBar.qml
src/controls.6/: ImageEditor.qml  ImageInfoDialog.qml  ImageViewer.qml  MetadataEditor.qml  qmldir
src/controls.6/android/: ImageEditor.qml
src/controls.6/image2text/: OCRPage.qml
src/controls.6/linux/: ImageEditor.qml
src/controls.6/private/: ColourBar.qml  Ruler.qml  TransformationBar.qml
src/controls/private/: ColourBar.qml  Ruler.qml  TransformationBar.qml
src/data/: assets.qrc  cities_db_script.sql  cities_script.sh  cities_script2.sh
